[package]
name = "axon-abi"
version = "0.0.1"
edition = "2021"
authors = ["Axon Dev <axon@axonweb3.io>"]
license = "MIT"
include = ["src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["axon", "abi"]
categories = ["cryptography"]
repository = "https://github.com/axonweb3/axon-abi"
description = """
Axon system contract ABI encode tools.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
axon-tools = { version = "0.0.11", features = ["hash"] }
ckb-jsonrpc-types = "0.110"

[dev-dependencies]
ckb-types = "0.110"
rand = "0.8"
serde_json = "1.0"
